Fixed h1 position and size on each page. Resized and positioned menu portrait on mobile phone view

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -98,22 +98,21 @@
       margin-top: 10vh;
     }
 
-
-    #about h1 {
+    &#about h1 {
       font-size: 5rem;
       line-height: 1;
       margin-bottom: 3rem;
       margin-top: 2rem;
     }
 
-    #work h1 {
+    &#work h1 {
       font-size: 4rem;
       line-height: 1;
       margin-bottom: 3rem;
       margin-top: 2rem;
     }
 
-    #contact h1 {
+    &#contact h1 {
       font-size: 5rem;
       line-height: 1;
       margin-bottom: 3rem;
@@ -125,7 +124,7 @@
     grid-template-columns: 1fr;
   }
 
-  .menu-branding .portrait {
+  .portrait {
     background-size: contain;
     height: 150px;
     width: 150px;
